--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -19,9 +19,8 @@
       <p-button
         libNavButton
         size="large"
-        routerLink="/"
+        routerLink="/home"
         routerLinkActive="bg-surface-100 dark:bg-surface-700 rounded-base"
-        [routerLinkActiveOptions]="{ exact: true }"
         [queryParams]="null"
         [state]="{}"
         icon="pi pi-home"
@@ -47,23 +46,22 @@
 </p-sidebar>
 
 <aside
-  class="hidden justify-between gap-4 xl:h-content px-2 py-4 bg-content-background xl:sticky z-[1001] top-8 flex-col rounded-base xl:flex"
+  class="hidden justify-between gap-4 xl:h-content px-2 py-4 bg-content-background xl:sticky z-[1001] top-4 flex-col rounded-base xl:flex"
   [@slideInOut]="isExpanded() ? 'in' : 'out'"
 >
   <nav class="h-content flex flex-col justify-between">
     <div class="flex flex-col">
       <div class="h-9 flex items-center justify-center">
         @if (isLabelShowed()) {
-          <ng-container [ngTemplateOutlet]="logo" />
+        <ng-container [ngTemplateOutlet]="logo" />
         } @else {
-          <a
-            routerLink="/"
-            routerLinkActive="bg-surface-100 dark:bg-surface-700 rounded-base"
-            [routerLinkActiveOptions]="{ exact: true }"
-            class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
-          >
-            <i class="pi pi-home"></i>
-          </a>
+        <a
+          routerLink="/home"
+          routerLinkActive="bg-surface-100 dark:bg-surface-700 rounded-base"
+          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
+        >
+          <i class="pi pi-home"></i>
+        </a>
         }
       </div>
       <p-divider />
@@ -76,7 +74,7 @@
         >
           <i class="pi pi-search"></i>
           @if (isLabelShowed()) {
-            <span>Browse</span>
+          <span>Browse</span>
           }
         </a>
         <ng-container [ngTemplateOutlet]="links" />
@@ -86,45 +84,45 @@
     <div class="flex flex-col">
       <lib-cart-sidebar [isLabelShowed]="isLabelShowed()" />
       @if (isAuthenticated()) {
-        <a
-          routerLink="/account"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
-        >
-          <i class="pi pi-user"></i>
-          @if (isLabelShowed()) {
-            <span>Account</span>
-          }
-        </a>
-        <button
-          (click)="logout()"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
-        >
-          <i class="pi pi-sign-in"></i>
-          @if (isLabelShowed()) {
-            <span>Log out</span>
-          }
-        </button>
+      <a
+        routerLink="/account"
+        class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
+      >
+        <i class="pi pi-user"></i>
+        @if (isLabelShowed()) {
+        <span>Account</span>
+        }
+      </a>
+      <button
+        (click)="logout()"
+        class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
+      >
+        <i class="pi pi-sign-in"></i>
+        @if (isLabelShowed()) {
+        <span>Log out</span>
+        }
+      </button>
       } @else {
-        <a
-          routerLink="/login"
-          routerLinkActive="bg-surface-100 dark:bg-surface-700"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
-        >
-          <i class="pi pi-sign-in"></i>
-          @if (isLabelShowed()) {
-            <span>Log in</span>
-          }
-        </a>
-        <a
-          routerLink="/register"
-          routerLinkActive="bg-surface-100 dark:bg-surface-700"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
-        >
-          <i class="pi pi-user-plus"></i>
-          @if (isLabelShowed()) {
-            <span>Register</span>
-          }
-        </a>
+      <a
+        routerLink="/auth/login"
+        routerLinkActive="bg-surface-100 dark:bg-surface-700"
+        class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
+      >
+        <i class="pi pi-sign-in"></i>
+        @if (isLabelShowed()) {
+        <span>Log in</span>
+        }
+      </a>
+      <a
+        routerLink="/auth/register"
+        routerLinkActive="bg-surface-100 dark:bg-surface-700"
+        class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
+      >
+        <i class="pi pi-user-plus"></i>
+        @if (isLabelShowed()) {
+        <span>Register</span>
+        }
+      </a>
       }
       <p-divider />
       <div class="flex flex-col gap-2">
@@ -133,12 +131,11 @@
           class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
         >
           @if (isDark()) {
-            <i class="pi pi-moon"></i>
+          <i class="pi pi-moon"></i>
           } @else {
-            <i class="pi pi-sun"></i>
-          }
-          @if (isLabelShowed()) {
-            <span>{{ isDark() ? 'Dark' : 'Light' }}</span>
+          <i class="pi pi-sun"></i>
+          } @if (isLabelShowed()) {
+          <span>{{ isDark() ? 'Dark' : 'Light' }}</span>
           }
         </button>
         <button
@@ -146,12 +143,11 @@
           class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
         >
           @if (isExpanded()) {
-            <i class="pi pi-arrow-left"></i>
+          <i class="pi pi-arrow-left"></i>
           } @else {
-            <i class="pi pi-arrow-right"></i>
-          }
-          @if (isLabelShowed()) {
-            <span>Collapse</span>
+          <i class="pi pi-arrow-right"></i>
+          } @if (isLabelShowed()) {
+          <span>Collapse</span>
           }
         </button>
       </div>
@@ -171,33 +167,30 @@
 </ng-template>
 
 <ng-template #links>
-  @if (isAccountRouteActive()) {
-    @for (menuItem of menuItems(); track menuItem.label) {
-      <a
-        (click)="isOpen.set(false)"
-        [routerLink]="menuItem.routerLink"
-        routerLinkActive="bg-surface-100 dark:bg-surface-700"
-        class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
-      >
-        <i [class]="menuItem.icon"></i>
-        @if (isLabelShowed()) {
-          <span>{{ menuItem.label }}</span>
-        }
-      </a>
+  @if (isAccountRouteActive()) { @for (menuItem of menuItems(); track
+  menuItem.label) {
+  <a
+    (click)="isOpen.set(false)"
+    [routerLink]="menuItem.routerLink"
+    routerLinkActive="bg-surface-100 dark:bg-surface-700"
+    class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
+  >
+    <i [class]="menuItem.icon"></i>
+    @if (isLabelShowed()) {
+    <span>{{ menuItem.label }}</span>
     }
-  } @else {
-    @for (category of categories(); track category.id) {
-      <a
-        (click)="isOpen.set(false)"
-        routerLink="/browse"
-        [queryParams]="{ categories: category.name }"
-        class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
-        [state]="{ category: stringifyCategory(category) }"
-      >
-        <span>
-          {{ isLabelShowed() ? category.name : category.name.slice(0, 2) }}
-        </span>
-      </a>
-    }
-  }
+  </a>
+  } } @else { @for (category of categories(); track category.id) {
+  <a
+    (click)="isOpen.set(false)"
+    routerLink="/browse"
+    [queryParams]="{ categories: category.name }"
+    class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
+    [state]="{ category: stringifyCategory(category) }"
+  >
+    <span>
+      {{ isLabelShowed() ? category.name : category.name.slice(0, 2) }}
+    </span>
+  </a>
+  } }
 </ng-template>
