Fixed minor bugs, added refresh data button when error occur in book details

--- a/libs/client-web/cart/feature/cart-sidebar/src/lib/cart-sidebar/cart-sidebar.component.html
+++ b/libs/client-web/cart/feature/cart-sidebar/src/lib/cart-sidebar/cart-sidebar.component.html
@@ -14,6 +14,7 @@
   [(visible)]="visible"
   header="Cart"
   appendTo="body"
+  [blockScroll]="true"
   styleClass="max-w-[40rem] w-full rounded-r-base bg-surface-100 dark:bg-surface-950"
 >
   <ng-template pTemplate="header">
