--- a/libs/client-web/account/feature/orders/src/lib/orders.component.html
+++ b/libs/client-web/account/feature/orders/src/lib/orders.component.html
@@ -15,9 +15,9 @@
     <ng-template pTemplate="header">
       <tr>
         @for (col of columns(); track col.header) {
-        <th>
-          {{ col.header }}
-        </th>
+          <th>
+            {{ col.header }}
+          </th>
         }
       </tr>
     </ng-template>
@@ -30,50 +30,59 @@
             [severity]="order['status'] | statusToSeverity"
           />
         </td>
-        <td>{{ order['total'] | currency : 'USD' }}</td>
+        <td>{{ order['total'] | currency: 'USD' }}</td>
       </tr>
     </ng-template>
     <ng-template pTemplate="emptymessage">
       @if (orders().length === 0 && !error) {
-      <tr>
-        <td colspan="3" class="text-center">No orders found.</td>
-      </tr>
+        <tr>
+          <td [attr.colspan]="columns().length" class="text-center">
+            No orders found.
+          </td>
+        </tr>
       } @else if (error()) {
-      <tr>
-        <td colspan="3" class="text-center">{{ error() }}</td>
-      </tr>
+        <tr>
+          <td [attr.colspan]="columns().length" class="text-center">
+            {{ error() }}
+          </td>
+        </tr>
       }
     </ng-template>
     <ng-template pTemplate="loadingbody">
       @for (_ of skeletons(); track $index) {
-      <tr>
-        @for (column of columns(); track $index) {
-        <td>
-          <p-skeleton width="8rem" height="2rem" />
-        </td>
-        }
-      </tr>
+        <tr>
+          @for (column of columns(); track $index) {
+            <td>
+              <p-skeleton width="8rem" height="2rem" />
+            </td>
+          }
+        </tr>
       }
     </ng-template>
   </p-table>
 
   <p-sidebar
     (onHide)="selectedOrder.set(null)"
-    class="2xl:hidden w-[20rem]"
+    class="2xl:hidden"
     [(visible)]="sidebarVisible"
     position="right"
+    [blockScroll]="true"
+    appendTo="body"
+    styleClass="max-w-[40rem] w-full rounded-r-base bg-surface-100 dark:bg-surface-950"
   >
     <ng-template pTemplate="header">
       <span class="font-bold"> Order details </span>
     </ng-template>
-    <lib-order [orderDetails]="selectedOrder()" />
+    <lib-order class="w-full" [orderDetails]="selectedOrder()" />
   </p-sidebar>
 
-  @if (selectedOrder()) {
-  <lib-order class="flex w-full" [orderDetails]="selectedOrder()" />
-  } @else {
-  <div class="block text-center mt-12 text-3xl">
-    Select order to see details
+  <div class="hidden 2xl:flex w-full">
+    @if (selectedOrder()) {
+      <lib-order class="w-full" [orderDetails]="selectedOrder()" />
+    } @else {
+      <div class="text-center mt-12 text-3xl w-full">
+        Select order to see details
+      </div>
+    }
   </div>
-  }
 </div>
