--- a/libs/client-web/account/ui/src/lib/order/order.component.html
+++ b/libs/client-web/account/ui/src/lib/order/order.component.html
@@ -76,11 +76,16 @@
   <div
     class="bg-content-background rounded-base p-4 flex flex-col gap-6 lg:justify-between lg:flex-row"
   >
-    <div class="flex flex-col gap-6">
+    <div class="flex flex-col w-full gap-6">
       <span class="text-xl">Shipping method</span>
-      <span class="text-muted-color">
-        {{ orderDetails()?.shippingMethod?.name }}
-      </span>
+      <div class="flex items-center justify-between gap-4 w-full">
+        <span class="text-muted-color">
+          {{ orderDetails()?.shippingMethod?.name }}
+        </span>
+        <span class="text-muted-color">
+          {{ orderDetails()?.shippingMethod?.price | currency: 'USD' }}
+        </span>
+      </div>
     </div>
   </div>
   <div
