Added addresses feature

--- a/libs/client-web/account/feature/information/src/lib/information.component.html
+++ b/libs/client-web/account/feature/information/src/lib/information.component.html
@@ -1,7 +1,7 @@
 <div
   class="grid grid-cols-1 relative 2xl:grid-cols-2 gap-base 4xl:grid-cols-[1fr_1100px]"
 >
-  <div class="flex flex-col gap-4">
+  <div>
     <div class="flex flex-col gap-4 bg-content-background p-4 rounded-base">
       <h3 class="text-lg">Account data</h3>
       @if (loading()) {
@@ -44,10 +44,6 @@
           />
         </div>
       }
-    </div>
-
-    <div class="flex flex-col gap-4 bg-content-background p-4 rounded-base">
-      <h3 class="text-lg">Account data</h3>
     </div>
   </div>
   <div class="hidden 2xl:flex">
