--- a/libs/client-web/auth/feature/register/src/lib/register/register.component.html
+++ b/libs/client-web/auth/feature/register/src/lib/register/register.component.html
@@ -35,6 +35,7 @@
         slot="input"
         id="password"
         [feedback]="false"
+        [fluid]="true"
         [toggleMask]="true"
         [ngClass]="{
           'ng-dirty ng-invalid': registerForm.controls.password.invalid,
@@ -57,6 +58,7 @@
       <p-password
         slot="input"
         id="confirm-password"
+        [fluid]="true"
         [feedback]="false"
         [toggleMask]="true"
         [ngClass]="{
@@ -75,14 +77,20 @@
       }
     </lib-form-field>
 
-    <p-button
-      type="submit"
-      label="Register"
-      [loading]="loading()"
-      loading-icon="pi pi-spin pi-spinner"
-      iconPos="right"
-      [disabled]="registerForm.invalid"
-      class="mt-5 w-full"
-    />
+    <div
+      [pTooltip]="registerForm.invalid ? 'Form is invalid' : ''"
+      tooltipPosition="top"
+      class="w-full mt-5"
+    >
+      <p-button
+        type="submit"
+        label="Register"
+        [loading]="loading()"
+        styleClass="w-full"
+        loading-icon="pi pi-spin pi-spinner"
+        iconPos="right"
+        [disabled]="registerForm.invalid"
+      />
+    </div>
   </form>
 </lib-container>
