Moved addresses component and form to information page

--- a/libs/client-web/account/ui/src/lib/order/order.component.html
+++ b/libs/client-web/account/ui/src/lib/order/order.component.html
@@ -46,7 +46,7 @@
           }}</span>
         </div>
         <div class="text-muted-color">
-          {{ orderDetails()?.orderAddress?.country }}
+          {{ orderDetails()?.orderAddress?.country?.name }}
         </div>
       </div>
     </div>
